margins fixed and stagger on mobile implemented

--- a/src/app/responsive.scss
+++ b/src/app/responsive.scss
@@ -12,7 +12,8 @@
     line-height: 38px;
   }
 
-  p, li {
+  p,
+  li {
     font-size: 22px;
     line-height: 28px;
   }
@@ -51,7 +52,8 @@
     line-height: 34px;
   }
 
-  p, li {
+  p,
+  li {
     font-size: 18px;
     line-height: 24px;
   }
@@ -69,6 +71,10 @@
     padding: 0 48px 24px 48px;
     width: 100vw;
   }
+
+  #projectsSection .squaresGridTwo {
+    direction: rtl;
+  }
 }
 
 @media screen and (max-width: 680px) {
@@ -85,7 +91,8 @@
     line-height: 32px;
   }
 
-  p, li {
+  p,
+  li {
     font-size: 16px;
     line-height: 21px;
   }
